@@ -3,6 +3,7 @@ ART 3.10
 * Allow changing job owner
 * Check upper case and lower case table names for cache resultset jobs
 * Fix for parent parameters not being considered in drilldown reports
+* Stop setting jasperreports excel export options
 * Updated jclouds
 
 ART 3.9
